# doom-fire-kata-hs

./: .gitignore  LICENSE  README.md  doom-fire.cabal  hie.yml  stack.yaml
src/: Main.hs
