name: doom-fire
version: 0.0.1
synopsis: DOOM fire kata
license: BSD3
license-file: LICENSE
author: Richard Lewis
maintainer: richard@rjlewis.me.uk
build-type: Simple
cabal-version: >=1.10

executable doom-fire
  main-is: Main.hs
  build-depends: base
               , lens
               , linear
               , random
               , sdl2
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -threaded -Wall
